# midix

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: channel.rs  controller.rs  key.rs  lib.rs  micros.rs  note.rs  pitch_bend.rs  program.rs  song_position_pointer.rs  utils.rs  velocity.rs
src/bevy/: mod.rs
src/bevy/asset/: sound_font.rs
src/bevy/song/: mod.rs
src/byte/: mod.rs
src/error/: mod.rs
src/events/: live.rs  mod.rs
src/file/: builder.rs  format.rs  header.rs  mod.rs  timed_event_iter.rs  track.rs
src/file/builder/: format.rs  mod.rs
src/file/builder/chunk/: header.rs  mod.rs
src/file/builder/event/: chunk.rs  mod.rs
src/file/builder/events/: chunk.rs  mod.rs
src/file/meta/: mod.rs  smpte_offset.rs  tempo.rs  time_signature.rs
src/file/timing/: mod.rs  smpte.rs
src/file/track/: mod.rs
src/file_repr/: smpte.rs
src/file_repr/chunk/: header.rs
src/file_repr/meta/: mod.rs  smpte_offset.rs  tempo.rs  text.rs  time_signature.rs
src/message/: mod.rs  time.rs
src/message/channel/: mod.rs  mode.rs  voice.rs  voice_event.rs
src/message/system/: common.rs  exclusive.rs  mod.rs  realtime.rs
src/reader/: error.rs  mod.rs
tests/: read_all.rs  smpte_offset.rs  smpte_offset_errors.rs
tests/simple_midi/: main.rs  parsed.rs
