[package]
name = "midix"
version = "4.0.0-alpha.4"
authors = ["dsgallups <dsgallups@protonmail.com>"]
edition = "2024"
description = "MIDI structures designed for humans"
repository = "https://github.com/dsgallups/midix"
documentation = "https://docs.rs/midix"
readme = "README.md"
keywords = ["midi", "audio", "parser", "bevy"]
categories = ["multimedia::audio", "multimedia::encoding", "multimedia"]
license = "MIT OR Apache-2.0"
exclude = ["assets/*"]


[features]
default = ["std"]
std = ["thiserror/std", "tracing?/std", "bevy?/std"]
web = ["bevy_platform/web"]
bevy = ["dep:bevy"]
bevy_asset = ["bevy/bevy_asset"]
tracing = ["dep:tracing"]
serde = ["dep:serde"]


[dependencies.bevy]
version = "0.17.0-rc"
optional = true
default-features = false

[dependencies]
thiserror = { version = "2.0", default-features = false }
# Bevy feature deps
bevy_platform = { version = "0.17.0-rc", optional = true, default-features = false, features = [
    "alloc",
] }
serde = {version = "1.0", features = ["derive"], optional = true}
tracing = { version = "0.1.41", default-features = false, optional = true }

[dev-dependencies]
pretty_assertions = { default-features = false, features = [
    "alloc",
], version = "1.4" }

# [dev-dependencies.bevy]
# version = "0.16"
# default-features = true

# [[example]]
# name = "2dpiano"
# required-features = ["example"]

# [[example]]
# name = "input"
# path = "examples/input/main.rs"
# required-features = ["example"]

# [[example]]
# name = "input_2dpiano"
# path = "examples/input_2dpiano/main.rs"
# required-features = ["example"]

# [[example]]
# name = "iterate_voices"
# required-features = ["example"]

# [[example]]
# name = "pitchbend"
# required-features = ["example"]

# [[example]]
# name = "play_file"
# required-features = ["example"]

# [[example]]
# name = "programmatic_complex_song"
# required-features = ["example"]

# [[example]]
# name = "programmatic_simple_song"
# required-features = ["example"]

# [[example]]
# name = "scale"
# required-features = ["example"]

# debug = ["bevy_resources"]
# example = [
#     "bevy_resources",
#     "std",
#     "bevy/bevy_color",
#     "bevy/bevy_core_pipeline",
#     "bevy/bevy_ui",
#     "bevy/bevy_ui_picking_backend",
#     "bevy/bevy_winit",
#     "bevy/bevy_window",
#     "bevy/x11",
#     # note that the wasm example freezes since when this feature is not enabled! TODO
#     "bevy/multi_threaded",
# ]
#

# bevy_resources = [
#     "bevy",
#     "dep:midir",
#     "dep:tinyaudio",
#     "dep:itertools",
#     "dep:rustysynth",
#     "dep:crossbeam-channel",
# ]
